--- a/new-app-files/index.html
+++ b/new-app-files/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Mynders | App Mock</title>
-  <link rel="icon" type="image/png+xml" href="/icon32.png" />
+  <link rel="icon" type="image/png+xml" href="/src/assets/favicon.png" />
 
 </head>
 
